# moralization-analyzer

./: .dockerignore  .flake8  .flake8_nb  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codecov.yml  environment.yml  input.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  docs.yml
All_Data/: Alle_bearbeiteten_Annotationen-0_label.csv
All_Data/WebAnno_TSV_v33/: Gerichtsurteile-neg-AW-neu-optimiert-BB.tsv  Gerichtsurteile-pos-AW-neu-optimiert-BB.tsv  Interviews-neg-SH-neu-optimiert-AW.tsv  Interviews-pos-SH-neu-optimiert-AW.tsv  Kommentare-pos-RR-neu-optimiert-CK.tsv  Leserbriefe-pos-BB-neu-optimiert-RR.tsv  Plenarprotokolle-neg-BB-neu-optimiert-RR.tsv  Plenarprotokolle-pos-SH-neu-optimiert-AW.tsv  Sachbücher-pos-AW-neu-optimiert-BB.tsv  (+3 more)
Test_Data/: example_config.cfg
data/: Gerichtsurteile-neg-AW-neu-optimiert-BB.xmi  Leserbriefe-pos-BB-neu-optimiert-RR.xmi  Plenarprotokolle-neg-BB-neu-optimiert-RR.xmi  TypeSystem.xml
moralization/: __init__.py  analyse.py  data_manager.py  inout.py  input.py  input_data.py  machine_learning.py  main.py  model_manager.py  paths.py  plot.py  spacy_data_handler.py  spacy_model.py  spacy_model_manager.py  transformers_data_handler.py  transformers_model.py  transformers_model_manager.py  utils.py
notebooks/: DemoNotebook_SpacyDemo.ipynb  DemoNotebook_interactive_plots.ipynb  DemoNotebook_spacy_model.ipynb  DemoNotebook_statistics.ipynb  DemoNotebook_transformers_model.ipynb  Example_csi_loading.ipynb  Gerichtsurteile-pos-AW-neu-optimiert-BB.xmi  Token_classification_test_mydata.ipynb  TypeSystem.xml  binary_classifier.ipynb  data_manager_test.ipynb  first_test.ipynb  inception_example.xmi  model_manager_test.ipynb  spacy_classifier.ipynb  spacy_demo.ipynb  test_text.txt  test_text.xmi  transfomers.ipynb
source/: index.rst  overview.rst
tests/: test_analyse.py  test_inout.py
(+51 files in other folders)
