[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "moralization"
version = "0.0.1"
description = "Moralization analysis in corpora"
readme = "README.md"
maintainers = [
    { name = "Inga Ulusoy", email = "ssc@iwr.uni-heidelberg.de" },
    { name = "Liam Keegan", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas",
    "numpy",
    "dkpro-cassis", 
    "matplotlib", 
    "IPython",
    "seaborn",
    "click",
    "importlib_metadata",
]

[tool.setuptools.package-data]
# Include any *.xml files found in the "data" subdirectory of "moralization"
"moralization.data" = ["*.xml"]

[project.scripts]
moralization_copy_notebooks = "moralization.paths:copy_notebooks"

[tool.setuptools]
packages = ["moralization", "moralization.data"]
