[metadata]
name = moralization
version = attr:moralization.__version__
description = moralization_tmp
long_description = file: README.md
long_description_content_type = text/markdown
author = SSC
author_email = ssc@iwr.uni-heidelberg.de
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pandas
    numpy
    dkpro-cassis 
    matplotlib 
    IPython
    seaborn
    click
include_package_data = True

[options.entry_points]
console_scripts =
    moralization = moralization.__main__:main
    copy_moralization_notebooks = moralization.paths:copy_notebooks

[options.package_data]
* =
    notebooks/*
